@@ -1,4 +1,8 @@
 2014-11-19  Renlin Li  <Renlin.Li@arm.com>
+    PR target/63424
+	* gcc.target/aarch64/pr63424.c: New test.
+
+2014-11-19  Renlin Li  <Renlin.Li@arm.com>
 
     PR middle-end/63762
 	* gcc.dg/pr63762.c: New test. 
